--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <h1 id="title">Name Coolifier</h1>
             <div class="input">
                 <label for="fname">First Name</label>
-                <input type="text" id="fname" value="Andy"><br><br>
+                <input type="text" id="fname"><br><br>
                 <label for="lname">Last Name</label>
-                <input type="text" id="lname" value="Urocki"><br><br>
+                <input type="text" id="lname"><br><br>
                 <input type="button" id="coolify" value="Coolify" onclick="coolify()">
             </div>
             <p id="coolname">Cool Name: </p>
