--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&family=Sixtyfour&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="site">
             <h1 id="title">Name Coolifier</h1>
             <div class="input">
-                <label for="fname">First Name</label>
-                <input type="text" id="fname"><br><br>
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname"><br><br>
+                <label for="fname">First Name: </label>
+                <input type="text" id="fname" class="textbox"><br><br>
+                <label for="lname">Last Name: </label>
+                <input type="text" id="lname" class="textbox"><br><br>
                 <input type="button" id="coolify" value="Coolify" onclick="coolify()">
             </div>
             <p id="coolname">Cool Name: </p>
