--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&family=Sixtyfour&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link id="style" rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="site">
@@ -18,6 +18,7 @@
                 <input type="button" id="coolify" value="Coolify" onclick="coolify()">
             </div>
             <p id="coolname">Cool Name: </p>
+            <input type="button" id="toggle" value="Dark" onclick="toggle()">
         </div>
         <script src="index.js"></script>
     </body>
