--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&family=Sixtyfour&display=swap" rel="stylesheet">
         <link id="style" rel="stylesheet" href="style.css">
+        <title>Name Coolifier</title>
     </head>
     <body>
         <div class="site">
